deriving-0.1.1/tests/rejected/functorf.ml
(* Reject types called 'f' to avoid confusion with the overloaded type parameter *)
type f = F deriving (Functor)
